table cell resize 成功!!! Ya!!!

--- a/src/app/modules/demo/components/table/table.component.html
+++ b/src/app/modules/demo/components/table/table.component.html
@@ -1,16 +1,16 @@
 <p>table works!</p>
 <table style="border-collapse: collapse;">
     <colgroup>
-        <col>
-        <col>
-        <col>
-        <col>
+        <col style="width:100px;">
+        <col style="width:100px;">
+        <col style="width:100px;">
+        <col style="width:100px;">
     </colgroup>
     <tr>
+        <td colspan='2'></td>
         <td></td>
         <td></td>
-        <td></td>
-        <td></td>
+        <!-- <td></td> -->
     </tr>
     <tr>
         <td></td>
