--- a/src/app/modules/demo/components/table/table.component.css
+++ b/src/app/modules/demo/components/table/table.component.css
@@ -1,7 +1,8 @@
-table tr,td{
-    border:2px solid black;
-    height:20px;
+table tr,
+td {
+  border: 2px solid black;
+  height: 20px;
 }
-table{
-    width:100%;
+table {
+  table-layout: fixed;
 }
